--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17,7 +17,25 @@ body {
     padding: 0;
     list-style: none;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 420px){
+    .pokemon-list{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 576px){
+    .pokemon-list{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .pokemon-list{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
 
 .pokemon {
