--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -55,6 +55,10 @@ body {
     justify-content: space-between;
 }
 
+.pokemon-name{
+    text-transform: capitalize;
+}
+
 .pokemon-info-body{
     display: flex;
     justify-content: space-between;
