--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,8 +1,3 @@
-:root {
-    --green: #49D0B0;
-    --green2: #61e1ca;
-}
-
 body {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
@@ -20,26 +15,25 @@ body {
     grid-template-columns: 1fr;
 }
 
-@media screen and (min-width: 420px){
-    .pokemon-list{
+@media screen and (min-width: 420px) {
+    .pokemon-list {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 576px){
-    .pokemon-list{
+@media screen and (min-width: 576px) {
+    .pokemon-list {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
-@media screen and (min-width: 992px){
-    .pokemon-list{
+@media screen and (min-width: 992px) {
+    .pokemon-list {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
 
 .pokemon {
-    background-color: var(--green);
     height: 100px;
     margin: .5rem;
     padding: 2rem 1rem;
@@ -50,37 +44,36 @@ body {
     flex-direction: column;
 }
 
-.pokemon-info-head{
+.pokemon-info-head {
     display: flex;
     justify-content: space-between;
 }
 
-.pokemon-name{
+.pokemon-name {
     text-transform: capitalize;
 }
 
-.pokemon-info-body{
+.pokemon-info-body {
     display: flex;
     justify-content: space-between;
 }
 
-.pokemon-type-list{
+.pokemon-type-list {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.pokemon-type{
-    background-color: var(--green2);
+.pokemon-type {
+    filter: brightness(1.1);
     font-size: .65rem;
-    margin:.2rem;
+    margin: .2rem;
     padding: .2rem;
     text-align: center;
     border-radius: 2rem;
-
 }
 
-.pokemon-code{
+.pokemon-code {
     align-self: flex-end;
     opacity: 0.3;
 }
@@ -89,4 +82,76 @@ body {
     max-width: 100%;
     height: 80px;
     align-self: flex-end;
+}
+
+.normal {
+    background-color: #a6a877;
+}
+
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+
+.water {
+    background-color: #678fee;
+}
+
+.electric {
+    background-color: #f7cf2e;
+}
+
+.ice {
+    background-color: #98d5d7;
+}
+
+.ground {
+    background-color: #dfbf69;
+}
+
+.flying {
+    background-color: #a98ff0;
+}
+
+.poison {
+    background-color: #a040a0;
+}
+
+.fighting {
+    background-color: #bf3029;
+}
+
+.psychic {
+    background-color: #f65687;
+}
+
+.dark {
+    background-color: #725847;
+}
+
+.rock {
+    background-color: #b8a137;
+}
+
+.bug {
+    background-color: #a8b720;
+}
+
+.ghost {
+    background-color: #6e5896;
+}
+
+.steel {
+    background-color: #b9b7cf;
+}
+
+.dragon {
+    background-color: #6f38f6;
+}
+
+.fairy {
+    background-color: #f9aec7;
 }
